# Pensieve

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LLM-Knowledge-Base-Blueprint.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.obsidian/: graph.json  workspace.json
config/: env.example  litellm_config.yaml  models.yaml
docs/: index.html
docs/superpowers/plans/: 2026-04-03-llm-knowledge-base.md
raw/articles/: karpathy-llm-knowledge-bases.md
scripts/: bootstrap.sh  compile.py  daily_workflow.sh  data_repo.py  ingest.py  lint.py  query.py  remove.py  search.py
scripts/utils/: llm_client.py  markdown_utils.py
tests/: conftest.py  test_compile.py  test_ingest.py  test_lint.py  test_llm_client.py  test_search.py
tools/: kb
wiki/: _dashboard.md  _graph.md  _index.md
wiki/.obsidian/: graph.json  workspace.json
wiki/concepts/: automated-content-compilation.md  knowledge-structuring.md  llm-knowledge-bases.md
wiki/summaries/: karpathy-llm-knowledge-bases.md
