[project]
name = "pensieve"
version = "0.1.0"
description = "A self-maintaining, LLM-compiled personal knowledge base"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "knowledge-base", "obsidian", "wiki", "rag", "pensieve", "personal-knowledge-management"]
dependencies = [
    "litellm",
    "click",
    "rich",
    "pyyaml",
    "python-frontmatter",
    "beautifulsoup4",
    "markdownify",
    "matplotlib",
    "requests",
    "numpy",
]

[project.optional-dependencies]
cloud = ["openai", "anthropic"]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
